--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -50,12 +50,11 @@ body, html {
 .laptop-screen {
   width: 100%;
   height: 53vh;
-  background-image: url('/src/assets/Quant.png'); /* Update with your image path */
-  background-size: 150px; /* Small fixed size */
-  background-repeat: no-repeat; /* Don't repeat */
-background-position: center;
+  background-image: url('/src/assets/Quant.png'); 
+  background-size: 230px;
+  background-repeat: no-repeat; 
+  background-position: center;
   background-attachment: fixed; 
-  
   border: 10px solid #3c3c3c;
   border-radius: 10px 10px 0 0;
   padding-top: 45px;
@@ -66,6 +65,16 @@ background-position: center;
   backdrop-filter: blur(6px);
   position: relative;
 }
+
+.laptop-screen.hide-background {
+  background-image: none !important;
+}
+
+
+.laptop-screen.hide-background {
+  background-image: none !important;
+}
+
 
 .logout-button {
   position: fixed;
@@ -108,7 +117,6 @@ background-position: center;
   }
 }
 
-/* Phones */
 @media screen and (max-width: 480px) {
   .logout-button {
     padding: 6px 10px;
@@ -121,7 +129,6 @@ background-position: center;
     font-size: 12px;
   }
 }
-
 
 .laptop-base {
   width: 60%;
@@ -139,7 +146,7 @@ background-position: center;
 }
 
 .kenai-logo img {
-  width: 230px;
+  width: 300px;
   height: auto;
   display: block;
 }
