--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -51,7 +51,7 @@ body, html {
   width: 100%;
   height: 53vh;
   background-image: url('/src/assets/Quant.png'); 
-  background-size: 230px;
+  background-size: 275px;
   background-repeat: no-repeat; 
   background-position: center;
   background-attachment: fixed; 
@@ -65,16 +65,6 @@ body, html {
   backdrop-filter: blur(6px);
   position: relative;
 }
-
-.laptop-screen.hide-background {
-  background-image: none !important;
-}
-
-
-.laptop-screen.hide-background {
-  background-image: none !important;
-}
-
 
 .logout-button {
   position: fixed;
@@ -117,6 +107,7 @@ body, html {
   }
 }
 
+/* Phones */
 @media screen and (max-width: 480px) {
   .logout-button {
     padding: 6px 10px;
@@ -129,6 +120,7 @@ body, html {
     font-size: 12px;
   }
 }
+
 
 .laptop-base {
   width: 60%;
@@ -146,7 +138,7 @@ body, html {
 }
 
 .kenai-logo img {
-  width: 300px;
+  width: 230px;
   height: auto;
   display: block;
 }
