--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -51,7 +51,7 @@ body, html {
   width: 100%;
   height: 53vh;
   background-image: url('/src/assets/Quant.png'); 
-  background-size: 275px;
+  background-size: 230px;
   background-repeat: no-repeat; 
   background-position: center;
   background-attachment: fixed; 
@@ -65,6 +65,12 @@ body, html {
   backdrop-filter: blur(6px);
   position: relative;
 }
+
+.laptop-screen.no-background {
+  background-image: none !important;
+}
+
+
 
 .logout-button {
   position: fixed;
@@ -237,6 +243,7 @@ body, html {
 .chat-text {
   flex: 1;
 }
+
 
 .input-container {
   position: absolute;
